--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,12 +1,28 @@
 *{box-sizing: border-box;
 padding: 0;
 margin: 0;
-color: rgb(43, 40, 40);}
+color: rgb(255, 255, 255);
+}
 body{
-   background-color: azure;
+   background-color: rgb(93, 93, 255);
     }
+h1{
+    padding: 40px;
+    color: white;
+}
+/*Paragraphs*/
 p{
     text-align: center;
-    padding: 40px;
+    padding: 10px;
     font-size: 20px;
 }
+/*bootstrap navbar */
+.nav-link{color: white;}
+.nav-link:hover{color: aqua;}
+
+.animation{
+   display: flex;
+    justify-content: center;
+}
+.btn btn-primary btn-lg{display: flex;
+justify-content: center;}
