--- a/CSS/game.css
+++ b/CSS/game.css
@@ -1,4 +1,27 @@
 *{color: white;}
+
+/*background gradient animation*/
+body{
+    height: 100vh;
+    width: 100%;
+    background:linear-gradient(45deg,rgb(76, 76, 218),rgb(12, 86, 12));
+    background-size: 300% 300%;
+    animation: color 12s ease-in-out infinite;
+}
+/*keyframe used to change colour from time to time*/
+@keyframes color{
+    0%{
+        background-position: 0 50%;
+    }
+    50%{
+        background-position: 100% 50%;
+    }
+    0%{
+        background-position: 0 50%;
+    }
+}
+
+
 .footer{color: white;}
 h1{
     text-align: center;
@@ -18,7 +41,7 @@ h1{
     font-size: 50px;
     border: 0.1rem solid rgb(5, 5, 103);
     background-color: rgb(28, 125, 93);
-    margin: 5px;
+    margin: 8px;
 }
 .choice-container:hover{
     cursor: pointer;
@@ -44,11 +67,32 @@ h1{
 #hud{
     display: flex;
     justify-content: space-between;
+    margin: 20px;
 }
 .hud-prefix{
     text-align: center;
-    font-size: 20px;
+    font-size: 30px;
+    
 }
 .hud-main-text{
     text-align: center;
+    font-size: 30px;
+}
+.background{
+    
+        z-index: -1;
+        width: 50%;
+        height: 100%;
+        left: 0;
+        right: 0;
+        position: relative;
+        margin-left: auto;
+        margin-right: auto;
+
+ 
+}
+@media (min-width: 1025px) and (max-width: 1280px) {
+    .lottie-bg {
+        width: 65%;
+    }
 }
