--- a/CSS/style.css
+++ b/CSS/style.css
@@ -72,7 +72,7 @@ justify-content: center;
 footer{
     padding: 50px;
     color: black;
-    background-color: rgb(51, 51, 198);
+    background-color: rgb(17, 21, 129);
    display: flex;
    justify-content: center;
    
@@ -324,6 +324,9 @@ footer{
         margin: 50px;
     }
     .form-popup{
+        flex-direction: column;
+    }
+    .quiz-container{
         flex-direction: column;
     }
 
