--- a/CSS/home.css
+++ b/CSS/home.css
@@ -13,14 +13,14 @@
 /*background animation for starting page*/
 
 .context {
-        width: 100%;
-        position: absolute;
-        top:50vh;
-        
-    }
-    
-    
 
+        display: flex;
+        justify-content: center;
+        padding: 20px;
+        margin-top: 250px;
+        
+        
+}
 
 .context h1{
     text-align: center;
@@ -28,11 +28,30 @@
     font-size: 50px;
 }
 
+.buttons{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.buttons a{
+    background-color: red;
+    margin: 10px;
+    text-align: center;
+    width: 20%;
+    text-decoration: none;
+    padding: 10px;
+    border-radius: 10px;
+}
+.buttons a:hover{
+    background-color: #8f94fb;
+}
 
 
 
-.area{
+body{
     background: #4e54c8;  
+    background-size: cover;
     background: -webkit-linear-gradient(to left, #8f94fb, #4e54c8);  
     width: 100%;
     height:100vh;
@@ -41,7 +60,7 @@
 }
 
 .circles{
-    position: absolute;
+ 
     top: 0;
     left: 0;
     width: 100%;
@@ -151,6 +170,15 @@
         transform: translateY(-1000px) rotate(720deg);
         opacity: 0;
         border-radius: 50%;
+    }
+
+}
+@media (max-width:600px)
+{
+    .context,.buttons{
+        margin: 20px;
+        flex-direction: column;
+        justify-content: center;
     }
 
 }
