--- a/CSS/game.css
+++ b/CSS/game.css
@@ -4,7 +4,7 @@
 body{
     height: 100vh;
     width: 100%;
-    background:linear-gradient(45deg,rgb(76, 76, 218),rgb(12, 86, 12));
+    background:linear-gradient(45deg,rgb(76, 76, 218),rgb(12, 86, 12), rgb(11, 81, 102));
     background-size: 300% 300%;
     animation: color 12s ease-in-out infinite;
 }
