--- a/CSS/style.css
+++ b/CSS/style.css
@@ -124,7 +124,7 @@ footer{
 }
 
 .disabled{
-    background-color: rgb(169, 169, 169);
+    background-color: rgb(169, 169, 169) !important;
     cursor: default;
 }
 
