--- a/CSS/style.css
+++ b/CSS/style.css
@@ -39,13 +39,13 @@ justify-content: center;
     margin: 40px;
     text-decoration: none;
     border: 20px;
-    display: inline;
+ 
 
 }
 /* Leaderboard button */
 .menu .link1{
     background-color: yellowgreen;
-    padding: 27px 68px;
+    padding: 27px 41px;
     border-radius: 20px;
 }
 .menu .link1:hover{
@@ -59,12 +59,6 @@ justify-content: center;
 }
 .menu .link2:hover{
     background-color:rgb(18, 184, 255);
-}
-/*Settings button */
-.menu .link3{
-    background-color: yellowgreen;
-    padding: 27px 68px;
-    border-radius: 20px;
 }
 .menu .link3:hover{
     background-color:rgb(18, 184, 255) ;
@@ -138,7 +132,8 @@ footer{
 .text{
     display: flex;
     justify-content: center;
-    padding: 22px;
+    padding: 8px;
+    margin: 20px;
     max-width: 100%;
 }
 .dropdown{
@@ -316,6 +311,7 @@ footer{
 {
     .menu{
         flex-direction: column;
+        
     }
     footer{
         flex-direction: row;
