Added comments, validated css and html codes

--- a/CSS/game.css
+++ b/CSS/game.css
@@ -26,7 +26,7 @@ body{
 h1{
     text-align: center;
 }
-
+/*styling of the entire quiz container*/
 .quiz-container{
     display: flex;
     justify-content: center;
@@ -34,15 +34,16 @@ h1{
     align-items: center;
     margin-top: 100px;
   }
-
+/*styling of choice container*/
 .choice-container{
     display: flex;
-    width: 100;
+    width: 100%;
     font-size: 50px;
     border: 0.1rem solid rgb(5, 5, 103);
     background-color: rgb(28, 125, 93);
     margin: 8px;
 }
+
 .choice-container:hover{
     cursor: pointer;
     box-shadow: 0 0.4rem 1.4rem 0 greenyellow;
@@ -58,12 +59,14 @@ h1{
     padding: 10px;
     font-size: 22px;
 }
+/*styling of background colour if answered corretly (implemented in javascript)*/
 .correct{background-color: rgb(1, 255, 56);}
 
+/*styling of background colour of choice if answered incorrectly (implemented in javascript)*/
 .incorrect{
     background-color: rgb(166, 21, 21);
 }
-
+/* styling for heads-up display*/
 #hud{
     display: flex;
     justify-content: space-between;
@@ -135,7 +138,7 @@ h1{
   .overlay {
     pointer-events: none;
 }
-
+/* loader to generate the questions */
 .loader {
   position: absolute;
   left: 50%;
@@ -167,4 +170,16 @@ h1{
   justify-content: center;
   padding: 22px;
   max-width: 100%;
+}
+/*Make the content responsive*/
+@media(max-width:600px){
+  .choice-container{
+    flex-direction: column;
+  }
+  .quiz-container{
+    flex-direction: column;
+  }
+  footer{
+    margin-top: 75px;
+  }
 }
